--- a/more.html
+++ b/more.html
@@ -19,7 +19,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>die Frau</h1>
-						<p>Meet Saloni Shukla.</p>
+						<p>Connect with Saloni Shukla.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
