--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Connect with Saloni-Projects</title>
+		<title>Projects | Saloni Shukla </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -15,7 +15,16 @@
 	<body class="is-preload">
 
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="wrapper" class="fade-in">
+				
+				<!-- Intro -->
+					<div id="intro">
+						<h1>die Frau</h1>
+						<p>Projects & Competitions</p>
+						<ul class="actions">
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+						</ul>
+					</div>
 
 				<!-- Header -->
 					<header id="header">
@@ -46,7 +55,9 @@
 							<header class="major">
 								<a class="image left "><img src="images/buttercup.jpg" alt=""  /></a>
 								<h3>Personal Projects | Team Projects | Competitions </h3>
-								<p>This section brief you with the personal and group projects of Saloni.</p>
+								<p>This section brief you with the personal and group projects of Saloni.
+								Please go ahead with any of the below category</p>
+								
 								</hr>
 							</header>
 
