--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 									<p>I am an Indian girl in her early twenties. 
 										I am born in the birthplace of Lord Krishna, Mathura and soon going to be graduated from the National Captial of India, New Delhi.
 										am a final year Electronics and Communication Engineering undergrad who get excited about new technologies.I love to read Novels.
-										I am very much into Indian mythologies. I love to dance, and always up to learn it professionally. I pen down my thoughts in form of rhymes whenever I feel upset, or confuse.
-										I like sketching, skating and swimming. I feel "S" is my symbol.</p>
+										I am very much into Indian Mythologies. I love to Dance, and always up to learn it professionally. I pen down my thoughts in form of rhymes whenever I feel upset, or confuse.
+										I like Sketching, Skating and Swimming. I feel "S" is my symbol.</p>
 								</article>
 								<article>
 									<header>
@@ -92,7 +92,7 @@
 									</header>
 									<a class="image right"><img src="images/gbpec.jfif" alt="" width="200" height="200"/></a>
 									<p>
-										In the first year, I actively participated in multiple competitions related to sports, cultural, theatre, and Robotics.
+										In the first year, I actively participated in multiple competitions related to Sports, Cultural, Theatre, and Robotics.
 										In the second year, I got fascinated by IoT and AI/ML. I built an amphibious remote control car, Multipurpose Quad-drone. 
 										In the third year, I won a national level competition conducted by the All India Council for Technical Education (AICTE) for an automatic mushroom grid.</p>
 								</article>
