--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="articles.html">Articles</a></li>
 							<li><a href="articles.html">Projects</a></li>
-							<li><a href="more.html">Connect With Saloni </a></li>
+							<li><a href="more.html">Connect </a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://medium.com/@salonishukla206" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
