--- a/articles.html
+++ b/articles.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Saloni Shukla|Articles</title>
+		<title>Articles | Saloni Shukla</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
