--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
 							<li><a href="index.html">About Saloni</a></li>
 							<li><a href="articles.html">Articles</a></li>
 							<li class="active"><a href="projects.html">Projects</a></li>
-							<li><a href="more.html">Connect with her</a></li>
+							<li><a href="more.html">Connect</a></li>
 							
 						</ul>
 						<ul class="icons">
