--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<a class="image left"><img src="images/shiv.jfif" alt="Welcome Note"  /></a>
+									<a class="image left"><img src="images/Screenshot (6).png" alt="Welcome Note"  /></a>
 									<p><b>Hey there !!! <br>
 										I am so happy to see you land on this page. It always excites me to know about others and to introduce them to myself.
 										Please come with me to walk through the heyday phases of my life or just to know a li'l more about me :)
