--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="articles.html">Articles</a></li>
-							<li><a href="articles.html">Projects</a></li>
+							<li><a href="projects.html">Projects</a></li>
 							<li><a href="more.html">Connect </a></li>
 						</ul>
 						<ul class="icons">
